<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_explore"
        android:icon="@drawable/ic_explore_black_24dp"
        android:title="@string/title_explore" />

    <item
        android:id="@+id/navigation_create"
        android:icon="@drawable/ic_create_black_24dp"
        android:title="@string/title_create" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_message"
        android:icon="@drawable/ic_sms_black_24dp"
        android:title="@string/title_message" />

</menu>
